Removed static markup outside DOMContainer

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-  <h1>BLA II</h1>
-  <h2>Getting started</h2>
+  <!-- <h1>BLA II</h1>
+  <h2>Getting started</h2> -->
 
   <div id="app"></div>
 
